# austinlake.github.io

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  Trunk.toml  build.sh  deploy.sh  index.html  railwind.config.ron  rust-toolchain.toml  script.js  style.css  tailwind.config.js
.github/workflows/: ci.yaml  ci.yml  deploy.yml  stale.yaml  stale.yml
src/: about.rs  app.rs  art.rs  dark_mode.rs  home.rs  lib.rs  main.rs  projects.rs
style/: tailwind.config.js
tests/: test.rs
