[package]
name = "website"
version = "0.1.0"
authors = ["Austin Lake <austinlake04@gmail.com>"]
edition = "2021"
rust-version = "1.71.0"
description = "My personal website. Built from scratch in Rust. Deployed via WebAssembly."
readme = "https://github.com/austinlake04/website/blob/main/README.md"
homepage = "https://austinlake04.com"
repository = "https://github.com/austinlake04/website"
license = "MIT or Apache-2.0"
categories = ["wasm"]
keywords = ["leptos", "webassembly", "wasm", ]

[dependencies]
color-eyre = "0.6.2"
strum = { version = "0.24", features = ["derive"] }
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
# tokio = { version = "1.28.0", features = ["full"] }
leptos = { version = "0.2.5", features = ["stable"]}
leptos_router = { version = "0.2.5", features = ["csr"]}
leptos_meta = { version = "0.2.5", features = ["csr"]}